@@ -1,3 +1,10 @@
+2007-10-16  Mark Rowe  <mrowe@apple.com>
+
+        Gtk build fix.  Replace use of assert with ASSERT_NOT_REACHED.
+
+        * platform/gtk/FontCacheGtk.cpp:
+        (WebCore::FontCache::platformInit):
+
 2007-10-16  Darin Adler  <darin@apple.com>
 
         Reviewed by Adam.
